--- a/etc/mc_rtc.conf
+++ b/etc/mc_rtc.conf
@@ -2,22 +2,27 @@
   //"Enabled" : ["Posture", "Body6d", "CoM", "Seq", "Driving", "Egress", "EgressMRQP"],
   //"Enabled" : ["Posture"],
   //"Default" : "Posture",
-  //"Enabled" : ["Seq"],
-  //"Default" : "Seq",
-  "Enabled"   : ["Body6d"],
-  "Default"   : "Body6d",
+  "Enabled" : ["Seq"],
+  "Default" : "Seq",
+  //"Enabled"   : ["Body6d"],
+  //"Default"   : "Body6d",
   "Seq" : {
     //"Env" : {
     //  "Path" : "/home/gergondet/devel-src/catkin_ws/mc_ws/src/hrp2_drc/hrp2_drc_description",
     //  "Name" : "drc_stairs2"
     //},
     //"Plan" : "drc_stairs_climbing.json",
+    //"Env" : {
+    //  "Path" : "/home/gergondet/devel-src/catkin_ws/mc_ws/src/mc_ros/mc_env_description",
+    //  "Name" : "jvrc_ladder"
+    //},
+    //"Plan" : "jvrc_ladder_climbing.json",
     "Env" : {
       "Path" : "/home/gergondet/devel-src/catkin_ws/mc_ws/src/mc_ros/mc_env_description",
-      "Name" : "jvrc_ladder"
+      "Name" : "irex_ladder"
     },
-    "Plan" : "jvrc_ladder_climbing.json",
-    "UseRealSensors" : 1,
+    "Plan" : "irex_ladder_climbing.json",
+    "UseRealSensors" : 0,
     "StartStance" : 0
   }
 }
