Start implementing a BCISelfInteract controller
Should mimic SoT interface and behaviour as best as possible

ToDo:
- implement read_msg to handle commands that would be sent by the
  bci_self_interact software

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -74,6 +74,7 @@ mc_control/mc_virtual_controller.cpp
 mc_control/mc_controller.cpp
 mc_control/mc_posture_controller.cpp
 mc_control/mc_body6d_controller.cpp
+mc_control/mc_bci_self_interact_controller.cpp
 mc_control/mc_com_controller.cpp
 mc_control/mc_seq_controller.cpp
 mc_control/mc_seq_steps.cpp
