--- a/data/drc_car_egress_config.json
+++ b/data/drc_car_egress_config.json
@@ -178,72 +178,72 @@
          "robotEnv" : [
             {
               "body1": "CHEST_LINK1_FULL",
-              "body2": "seat_back_hull",
+              "body2": "seat_back",
               "collisionConf": { "iDist" : 0.01, "sDist" : 0.005, "damping" : 0.5 }
             },
             {
               "body1": "RARM_LINK5",
-              "body2": "wheel_hull",
+              "body2": "wheel",
               "collisionConf": { "iDist" : 0.01, "sDist" : 0.005, "damping" : 0.5 }
             },
             {
               "body1": "RARM_LINK3",
-              "body2": "wheel_hull",
+              "body2": "wheel",
               "collisionConf":{"iDist": 0.02,"sDist": 0.01,"damping":0.5}
             },
             {
               "body1": "RARM_LINK2",
-              "body2": "wheel_hull",
+              "body2": "wheel",
               "collisionConf":{"iDist": 0.02,"sDist": 0.015,"damping":0.5}
             },
             {
               "body1": "LARM_LINK3",
-              "body2": "chassis_trunk_hull",
+              "body2": "chassis_trunk",
               "collisionConf":{ "iDist" : 0.01, "sDist" : 0.005, "damping" : 0.5 }
             },
             {
               "body1": "LARM_LINK2",
-              "body2": "chassis_trunk_hull",
+              "body2": "chassis_trunk",
               "collisionConf":{ "iDist" : 0.01, "sDist" : 0.005, "damping" : 0.5 }
             },
             {
               "body1": "RARM_LINK6",
-              "body2": "brake_hull",
+              "body2": "brake",
               "collisionConf":{ "iDist" : 0.01, "sDist" : 0.005, "damping" : 0.5 }
             },
             {
               "body1": "RARM_LINK2",
-              "body2": "brake_hull",
+              "body2": "brake",
               "collisionConf":{ "iDist" : 0.01, "sDist" : 0.005, "damping" : 0.5 }
             },
             {
               "body1": "RARM_LINK6",
-              "body2": "wheel_hull",
+              "body2": "wheel",
               "collisionConf":{ "iDist" : 0.01, "sDist" : 0.005, "damping" : 0.5 }
             },
             {
               "body1": "RARM_LINK1",
-              "body2": "wheel_hull",
+              "body2": "wheel",
               "collisionConf": { "iDist" : 0.01, "sDist" : 0.005, "damping" : 0.5 }
             },
             {
               "body1": "RARM_LINK5",
-              "body2": "board_hull",
+              "body2": "board",
               "collisionConf": { "iDist" : 0.01, "sDist" : 0.005, "damping" : 0.5 }
             },
             {
               "body1": "RARM_LINK3",
-              "body2": "board_hull",
+              "body2": "board",
               "collisionConf": { "iDist" : 0.01, "sDist" : 0.005, "damping" : 0.5 }
             },
             {
               "body1": "RARM_LINK2",
-              "body2": "board_hull",
+              "body2": "board",
               "collisionConf": { "iDist" : 0.01, "sDist" : 0.005, "damping" : 0.5 }
             },
             {
               "body1": "HEAD_LINK1",
-              "body2": "top_left_rung_lower_hull",
+              "body2": "top_left_rung_lower",
               "collisionConf": { "iDist" : 0.01, "sDist" : 0.005, "damping" : 0.5 }
             }
          ],
@@ -259,17 +259,17 @@
           "robotEnv" : [
             {
               "body1": "CHEST_LINK1",
-              "body2": "chassis_trunk_hull",
+              "body2": "chassis_trunk",
               "collisionConf": { "iDist" : 0.01, "sDist" : 0.005, "damping" : 0.5 }
             },
             {
               "body1": "BODY",
-              "body2": "chassis_trunk_hull",
+              "body2": "chassis_trunk",
               "collisionConf": { "iDist" : 0.01, "sDist" : 0.005, "damping" : 0.5 }
             },
             {
               "body1": "BODY",
-              "body2": "seat_hull",
+              "body2": "seat",
               "collisionConf": { "iDist" : 0.05, "sDist" : 0.01, "damping" : 0.1 }
             }
           ]
@@ -300,27 +300,27 @@
           "robotEnv" : [
             {
               "body1": "CHEST_LINK1",
-              "body2": "chassis_trunk_hull",
+              "body2": "chassis_trunk",
               "collisionConf": { "iDist" : 0.01, "sDist" : 0.005, "damping" : 0.5 }
             },
             {
               "body1": "BODY",
-              "body2": "chassis_trunk_hull",
+              "body2": "chassis_trunk",
               "collisionConf": { "iDist" : 0.01, "sDist" : 0.005, "damping" : 0.5 }
             },
             {
               "body1": "BODY",
-              "body2": "seat_hull",
+              "body2": "seat",
               "collisionConf": { "iDist" : 0.05, "sDist" : 0.01, "damping" : 0.1 }
             },
             {
               "body1": "LLEG_LINK5",
-              "body2": "floor_hull",
+              "body2": "floor",
               "collisionConf": { "iDist" : 0.05, "sDist" : 0.01, "damping" : 0.1 }
             },
             {
               "body1": "LLEG_LINK5",
-              "body2": "floor_step_hull",
+              "body2": "floor_step",
               "collisionConf": { "iDist" : 0.05, "sDist" : 0.01, "damping" : 0.1 }
             }
           ]
@@ -334,12 +334,12 @@
           "robotEnv" : [
             {
               "body1": "RLEG_LINK5",
-              "body2": "floor_hull",
+              "body2": "floor",
               "collisionConf": { "iDist" : 0.05, "sDist" : 0.01, "damping" : 0.1 }
             },
             {
               "body1": "RLEG_LINK5",
-              "body2": "floor_step_hull",
+              "body2": "floor_step",
               "collisionConf": { "iDist" : 0.05, "sDist" : 0.01, "damping" : 0.1 }
             }
           ]
