--- a/etc/mc_rtc.conf
+++ b/etc/mc_rtc.conf
@@ -1,6 +1,6 @@
 {
   //"Enabled" : ["Posture", "Body6d", "CoM", "Seq", "Driving", "Egress", "EgressMRQP", "BCISelfInteract"],
-  "Enabled"   : ["Seq"],
+  "Enabled"   : ["BCISelfInteract"],
   //"Default"   : "Body6d",
   "Seq" : {
     //"Env" : {
