--- a/etc/mc_rtc.conf
+++ b/etc/mc_rtc.conf
@@ -1,6 +1,6 @@
 {
   //"Enabled" : ["Posture", "Body6d", "CoM", "Seq", "Driving", "Egress", "EgressMRQP", "BCISelfInteract"],
-  "Enabled"   : ["Driving"],
+  "Enabled"   : ["Seq"],
   //"Default"   : "Body6d",
   "Seq" : {
     //"Env" : {
@@ -12,15 +12,15 @@
     //  "Name" : "jvrc_ladder"
     //},
     //"Plan" : "jvrc_ladder_climbing.json",
-    //"Env" : {
-    //  "Name" : "irex_ladder"
-    //},
-    //"Plan" : "irex_ladder_climbing.json",
     "Env" : {
-      "Module" : "Polaris"
+      "Name" : "irex_ladder"
     },
-    "Plan" : "drc_car_egress.json",
-    "UseRealSensors" : 0,
+    "Plan" : "irex_ladder_climbing.json",
+    //"Env" : {
+    //  "Module" : "Polaris"
+    //},
+    //"Plan" : "drc_car_egress.json",
+    "UseRealSensors" : 1,
     "StartStance" : 0
   }
 }
