--- a/etc/mc_rtc.conf
+++ b/etc/mc_rtc.conf
@@ -20,7 +20,8 @@
     //  "Module" : "Polaris"
     //},
     //"Plan" : "drc_car_egress.json",
-    "UseRealSensors" : 1,
-    "StartStance" : 0
+    "UseRealSensors" : 0,
+    "StartStance" : 0,
+    "StepByStep"  : 0
   }
 }
